--- a/.github/workflows/main-dev.yml
+++ b/.github/workflows/main-dev.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: mr-smithers-excellent/docker-build-push@v6
         with:
+          addLatest: true
           directory: src/
           image: ${{ env.IMAGE_NAME }}
           registry: ${{ secrets.ACR_LOGIN_SERVER }}
